style.css
.feature {
    text-align: center;
}

.feature > .icon {
    width: 10rem;
    height: 10rem;
    padding: 2rem;
    text-align: center;
    display: inline-block;
}

.feature > .icon > img {
    max-width: 100%;
    max-height: 100%;
    display: inline-block;
}

